Added error messages to the login page. Added links between the login and signup pages. Added css to login and signup pages. Signup page is still incomplete

--- a/frontend/src/components/LoginPage.css
+++ b/frontend/src/components/LoginPage.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    height: 85vh;
     background: rgba(255, 255, 255, 0.8); 
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
     padding: 20px;
@@ -24,15 +24,23 @@
     width: 100%;
   }
   
-  .loginInput {
-    padding: 10px;
-    margin-bottom: 15px;
+  .loginPasswordInput {
+    padding: 15px;
+    margin-bottom: 20px;
     border: 1px solid #ccc;
     border-radius: 4px;
   }
+
+  .loginUsernameInput {
+    padding: 15px;
+    margin-bottom: 20px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+  }
+
   
   .loginButton {
-    padding: 10px 20px;
+    padding: 20px 10px;
     background-color: #007bff;
     color: white;
     border: none;
@@ -43,6 +51,8 @@
   
   .loginButton:hover {
     background-color: #0056b3;
+    transform: scale(1.02); 
+    box-shadow: 0 5px 15px rgba(0,0,0,0.2);
   }
   
   .loginLogo {
@@ -50,3 +60,33 @@
     margin-bottom: 50px;
   }
   
+  .signButton {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    text-align: center;
+    padding: 15px 50px;
+    transition: background-color 0.3s ease;
+  }
+
+  .signButton:hover {
+    transform: scale(1.02); 
+    box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+  }
+
+  .loginUsernameInput.error {
+    border-color: red;
+  }
+
+  .loginPasswordInput.error {
+    border-color: red;
+  }
+
+  .errorMessage {
+    color: red;
+    font-size: medium;
+  }
+  
+  
+    
