--- a/frontend/src/components/SignupPage.css
+++ b/frontend/src/components/SignupPage.css
@@ -1,62 +1,91 @@
 .signupContainer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    background: rgba(255, 255, 255, 0.8);
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-    border-radius: 8px;
-    max-width: 400px;
-    margin: auto;
-  }
-  
-  .signupTitle {
-    margin-bottom: 20px;
-    color: #333;
-  }
-  
-  .signupForm {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-  }
-  
-  .signupInput {
-    padding: 10px;
-    margin-bottom: 15px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-  
-  .signupButton {
-    padding: 10px 20px;
-    background-color: #007bff;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-  }
-  
-  .signupButton:hover {
-    background-color: #0056b3;
-  }
-  
-  .error {
-    color: red;
-    margin-bottom: 10px;
-  }
-  
-  .successMessage {
-    color: green;
-    margin-bottom: 10px;
-  }
-  
-  /* If you have a logo to include on the signup page similar to the login page */
-  .signupLogo {
-    width: 200px;
-    margin-bottom: 50px;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 85vh;
+  background: rgba(255, 255, 255, 0.8); 
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
+  padding: 20px;
+  border-radius: 8px;
+  max-width: 400px;
+  margin: auto; 
+}
+
+.signupTitle {
+  margin-bottom: 20px;
+  color: #333;
+}
+
+.signupForm {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.inputWrapper {
+  margin-bottom: 10px;
+}
+
+.inputWrapper label {
+  margin-bottom: 5px;
+  color: #333;
+}
+
+.inputWrapper input {
+  padding: 20px;
+  width: 80%;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.signUpButton {
+  padding: 20px;
+  background-color: #3fad1d;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.signUpButton:hover {
+  background-color: #2f8c15; /* Darker shade of green */
+  transform: scale(1.02);
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+}
+
+.error {
+  color: red;
+  margin-bottom: 10px;
+}
+
+.successMessage {
+  color: green;
+  margin-bottom: 10px;
+}
+
+.loginLink {
+  margin-top: 20px;
+  text-align: center;
+}
+
+.loginLink p {
+  margin-bottom: 10px;
+}
+
+.loginLinkButton {
+  padding: 15px 50px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.loginLinkButton:hover {
+  background-color: #0056b3;
+  transform: scale(1.02);
+  box-shadow: 0;
+}
