--- a/frontend/src/components/LoginPage.css
+++ b/frontend/src/components/LoginPage.css
@@ -1,21 +1,30 @@
+body {
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
+  background-color: black;
+}
+
 
 .loginContainer {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 85vh;
-    background: rgba(255, 255, 255, 0.8); 
+    height: 95vh;
+    background: linear-gradient(to bottom, #aaf5aa, #ffffff); /* Light green to white gradient */;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
     padding: 20px;
     border-radius: 8px;
     max-width: 400px;
     margin: auto; 
+    
   }
   
   .loginTitle {
     margin-bottom: 20px;
     color: #333;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
   }
   
   .loginForm {
@@ -28,25 +37,29 @@
     padding: 15px;
     margin-bottom: 20px;
     border: 1px solid #ccc;
-    border-radius: 4px;
+    border-radius: 10px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   }
 
   .loginUsernameInput {
     padding: 15px;
     margin-bottom: 20px;
     border: 1px solid #ccc;
-    border-radius: 4px;
+    border-radius: 10px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   }
 
   
   .loginButton {
     padding: 20px 10px;
-    background-color: #007bff;
+    background: linear-gradient(to bottom, #007bff, #0056b3);
     color: white;
     border: none;
-    border-radius: 4px;
+    border-radius: 20px;
     cursor: pointer;
-    transition: background-color 0.3s ease;
+    transition: background-color 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   }
   
   .loginButton:hover {
@@ -63,17 +76,31 @@
   .signButton {
     display: flex;
     justify-content: center;
+    background: linear-gradient(to bottom,#3fad1d, #2f8c15);
     align-items: center;
     margin-top: 20px;
+    border-radius: 20px;
     text-align: center;
     padding: 15px 50px;
-    transition: background-color 0.3s ease;
+    transition: background-color 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   }
 
   .signButton:hover {
     transform: scale(1.02); 
     box-shadow: 0 5px 15px rgba(0,0,0,0.2);
   }
+
+  .logoLink {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+}
+
+  .smallLogo {
+    width: 70px; /* Adjust size as needed */
+}
 
   .loginUsernameInput.error {
     border-color: red;
