--- a/frontend/src/components/SignupPage.css
+++ b/frontend/src/components/SignupPage.css
@@ -1,15 +1,22 @@
+body {
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
+  background: white;
+}
 .signupContainer {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 85vh;
-  background: rgba(255, 255, 255, 0.8); 
+  height: 95vh;
+  background: linear-gradient(to bottom, #aaf5aa, #ffffff); /* Light green to white gradient */
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
   padding: 20px;
   border-radius: 8px;
   max-width: 400px;
   margin: auto; 
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .signupTitle {
@@ -23,30 +30,32 @@
   width: 100%;
 }
 
-.inputWrapper {
-  margin-bottom: 10px;
-}
-
-.inputWrapper label {
-  margin-bottom: 5px;
-  color: #333;
-}
-
-.inputWrapper input {
-  padding: 20px;
-  width: 80%;
+.signupPasswordInput {
+  padding: 15px;
+  margin-bottom: 20px;
   border: 1px solid #ccc;
-  border-radius: 4px;
+  border-radius: 10px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+.signupUsernameInput {
+  padding: 15px;
+  margin-bottom: 20px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .signUpButton {
   padding: 20px;
-  background-color: #3fad1d;
+  background: linear-gradient(to bottom,#3fad1d, #2f8c15);
   color: white;
   border: none;
-  border-radius: 4px;
+  border-radius: 20px;
   cursor: pointer;
-  transition: background-color 0.3s ease;
+  transition: background-color 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .signUpButton:hover {
@@ -76,16 +85,18 @@
 
 .loginLinkButton {
   padding: 15px 50px;
-  background-color: #007bff;
+  background: linear-gradient(to bottom, #007bff, #0056b3);
   color: white;
   border: none;
-  border-radius: 4px;
+  border-radius: 20px;
   cursor: pointer;
-  transition: background-color 0.3s ease;
+  transition: background-color 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .loginLinkButton:hover {
   background-color: #0056b3;
   transform: scale(1.02);
-  box-shadow: 0;
+  box-shadow: 0 5px 15px rgba(0,0,0,0.2);
 }
